[package]
name = "sonos"
version = "0.1.0"
authors = ["chabare <chabare95@gmail.com>"]

[lib]
name = "sonos"
path = "src/lib.rs"

[[bin]]
name = "sonos"
path = "src/main.rs"
doc = false

[dependencies]
log = "*"
fern = "*"
futures = "*"
hyper = "*"

[target.'cfg(unix)'.dependencies.sonos_discovery]
version = "0.0.1"
